--- a/projects/gulpAndJade/app/contacts.html
+++ b/projects/gulpAndJade/app/contacts.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>SiteName</title>
     <link rel="stylesheet" href="/css/main.min.css">
+    <link rel="stylesheet" href="/css/jquery.fancybox.min.css">
   </head>
   <body>
     <header><a href="/" class="t-logo"><img src="../img/logo.png" alt="logo"></a>
@@ -178,5 +179,7 @@
     <footer>Это подвал сайта в отдельном файле</footer>
     <script src="/js/vendor.min.js"></script>
     <script src="/js/main.min.js"></script>
+    <script src="/libs/vendor/jquery-3.2.1.min.js"></script>
+    <script src="/libs/vendor/jquery.fancybox.min.js"></script>
   </body>
 </html>
