--- a/projects/gulpAndJade/app/about.html
+++ b/projects/gulpAndJade/app/about.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <title>SiteName</title>
     <link rel="stylesheet" href="/css/main.min.css">
-    <link rel="stylesheet" href="/css/jquery.fancybox.min.css">
   </head>
   <body>
     <header><a href="/" class="t-logo"><img src="../img/logo.png" alt="logo"></a>
@@ -14,28 +13,28 @@
       <div class="container">
         <h1>Страница о нас Loop</h1>
         <div class="thumbnail--container">
-          <div class="imageBlockTwo"><img src="/img/background.jpg"/>
+          <div class="imageBlockTwo"><a href="/img/background.jpg" data-fancybox="" data-caption="lorem ipsum."><img src="/img/background.jpg"/></a>
             <h4 class="image-caption">lorem ipsum.</h4>
           </div>
-          <div class="imageBlockTwo"><img src="/img/background.jpg"/>
+          <div class="imageBlockTwo"><a href="/img/background.jpg" data-fancybox="" data-caption="lorem ipsum."><img src="/img/background.jpg"/></a>
             <h4 class="image-caption">lorem ipsum.</h4>
           </div>
-          <div class="imageBlockTwo"><img src="/img/background.jpg"/>
+          <div class="imageBlockTwo"><a href="/img/background.jpg" data-fancybox="" data-caption="lorem ipsum."><img src="/img/background.jpg"/></a>
             <h4 class="image-caption">lorem ipsum.</h4>
           </div>
-          <div class="imageBlockTwo"><img src="/img/background.jpg"/>
+          <div class="imageBlockTwo"><a href="/img/background.jpg" data-fancybox="" data-caption="lorem ipsum."><img src="/img/background.jpg"/></a>
             <h4 class="image-caption">lorem ipsum.</h4>
           </div>
-          <div class="imageBlockTwo"><img src="/img/background.jpg"/>
+          <div class="imageBlockTwo"><a href="/img/background.jpg" data-fancybox="" data-caption="lorem ipsum."><img src="/img/background.jpg"/></a>
             <h4 class="image-caption">lorem ipsum.</h4>
           </div>
-          <div class="imageBlockTwo"><img src="/img/background.jpg"/>
+          <div class="imageBlockTwo"><a href="/img/background.jpg" data-fancybox="" data-caption="lorem ipsum."><img src="/img/background.jpg"/></a>
             <h4 class="image-caption">lorem ipsum.</h4>
           </div>
-          <div class="imageBlockTwo"><img src="/img/background.jpg"/>
+          <div class="imageBlockTwo"><a href="/img/background.jpg" data-fancybox="" data-caption="lorem ipsum."><img src="/img/background.jpg"/></a>
             <h4 class="image-caption">lorem ipsum.</h4>
           </div>
-          <div class="imageBlockTwo"><img src="/img/background.jpg"/>
+          <div class="imageBlockTwo"><a href="/img/background.jpg" data-fancybox="" data-caption="lorem ipsum."><img src="/img/background.jpg"/></a>
             <h4 class="image-caption">lorem ipsum.</h4>
           </div>
         </div>
@@ -45,6 +44,5 @@
     <script src="/js/vendor.min.js"></script>
     <script src="/js/main.min.js"></script>
     <script src="/libs/vendor/jquery-3.2.1.min.js"></script>
-    <script src="/libs/vendor/jquery.fancybox.min.js"></script>
   </body>
 </html>
