--- a/projects/gulpAndJade/app/catalog.html
+++ b/projects/gulpAndJade/app/catalog.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <title>SiteName</title>
     <link rel="stylesheet" href="/css/main.min.css">
-    <link rel="stylesheet" href="/css/jquery.fancybox.min.css">
   </head>
   <body>
     <header><a href="/" class="t-logo"><img src="../img/logo.png" alt="logo"></a>
@@ -19,28 +18,28 @@
           Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
         <div class="thumbnail--container">
-          <div class="imageBlockTwo"><a href="/img/background.jpg" data-fancybox="data-fancybox"><img src="/img/background.jpg"/></a>
+          <div class="imageBlockTwo"><a href="/img/background.jpg" data-fancybox="" data-caption="lorem ipsum."><img src="/img/background.jpg"/></a>
             <h4 class="image-caption">lorem ipsum.</h4>
           </div>
-          <div class="imageBlockTwo"><a href="/img/background.jpg" data-fancybox="data-fancybox"><img src="/img/background.jpg"/></a>
+          <div class="imageBlockTwo"><a href="/img/background.jpg" data-fancybox="" data-caption="lorem ipsum."><img src="/img/background.jpg"/></a>
             <h4 class="image-caption">lorem ipsum.</h4>
           </div>
-          <div class="imageBlockTwo"><a href="/img/background.jpg" data-fancybox="data-fancybox"><img src="/img/background.jpg"/></a>
+          <div class="imageBlockTwo"><a href="/img/background.jpg" data-fancybox="" data-caption="lorem ipsum."><img src="/img/background.jpg"/></a>
             <h4 class="image-caption">lorem ipsum.</h4>
           </div>
-          <div class="imageBlockTwo"><a href="/img/background.jpg" data-fancybox="data-fancybox"><img src="/img/background.jpg"/></a>
+          <div class="imageBlockTwo"><a href="/img/background.jpg" data-fancybox="" data-caption="lorem ipsum."><img src="/img/background.jpg"/></a>
             <h4 class="image-caption">lorem ipsum.</h4>
           </div>
-          <div class="imageBlockTwo"><a href="/img/background.jpg" data-fancybox="data-fancybox"><img src="/img/background.jpg"/></a>
+          <div class="imageBlockTwo"><a href="/img/background.jpg" data-fancybox="" data-caption="lorem ipsum."><img src="/img/background.jpg"/></a>
             <h4 class="image-caption">lorem ipsum.</h4>
           </div>
-          <div class="imageBlockTwo"><a href="/img/background.jpg" data-fancybox="data-fancybox"><img src="/img/background.jpg"/></a>
+          <div class="imageBlockTwo"><a href="/img/background.jpg" data-fancybox="" data-caption="lorem ipsum."><img src="/img/background.jpg"/></a>
             <h4 class="image-caption">lorem ipsum.</h4>
           </div>
-          <div class="imageBlockTwo"><a href="/img/background.jpg" data-fancybox="data-fancybox"><img src="/img/background.jpg"/></a>
+          <div class="imageBlockTwo"><a href="/img/background.jpg" data-fancybox="" data-caption="lorem ipsum."><img src="/img/background.jpg"/></a>
             <h4 class="image-caption">lorem ipsum.</h4>
           </div>
-          <div class="imageBlockTwo"><a href="/img/background.jpg" data-fancybox="data-fancybox"><img src="/img/background.jpg"/></a>
+          <div class="imageBlockTwo"><a href="/img/background.jpg" data-fancybox="" data-caption="lorem ipsum."><img src="/img/background.jpg"/></a>
             <h4 class="image-caption">lorem ipsum.</h4>
           </div>
         </div>
@@ -50,6 +49,5 @@
     <script src="/js/vendor.min.js"></script>
     <script src="/js/main.min.js"></script>
     <script src="/libs/vendor/jquery-3.2.1.min.js"></script>
-    <script src="/libs/vendor/jquery.fancybox.min.js"></script>
   </body>
 </html>
