--- a/projects/gulpAndJade/app/index.html
+++ b/projects/gulpAndJade/app/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <title>SiteName</title>
     <link rel="stylesheet" href="/css/main.min.css">
-    <link rel="stylesheet" href="/css/jquery.fancybox.min.css">
   </head>
   <body>
     <header><a href="/" class="t-logo"><img src="../img/logo.png" alt="logo"></a>
@@ -19,29 +18,77 @@
           Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
         <div class="thumbnail--container">
-          <div class="imageBlockTwo"><a href="/img/background.jpg" data-fancybox="data-fancybox"><img src="/img/background.jpg"/></a>
-            <h4 class="image-caption">lorem ipsum.</h4>
+          <div class="imageBlockTwo"><a href="/img/Corolla-122.jpg" target="_blank"><img src="/img/Corolla-122.jpg"/></a>
+            <div class="info">
+              <h4 class="image-caption">Toyota Corolla ZZE-122</h4>
+              <p class="year">Year: 2004</p>
+              <p class="capacity">Engine Capacity: 1.8</p>
+              <p class="hp">Horse Power: 132</p>
+              <p class="engine">Engine: 1ZZ-FE</p>
+            </div>
           </div>
-          <div class="imageBlockTwo"><a href="/img/background.jpg" data-fancybox="data-fancybox"><img src="/img/background.jpg"/></a>
-            <h4 class="image-caption">lorem ipsum.</h4>
+          <div class="imageBlockTwo"><a href="/img/Mark-X-2010.jpg" target="_blank"><img src="/img/Mark-X-2010.jpg"/></a>
+            <div class="info">
+              <h4 class="image-caption">Toyota Mark X (X130)</h4>
+              <p class="year">Year: 2010</p>
+              <p class="capacity">Engine Capacity: 2.5</p>
+              <p class="hp">Horse Power: 203</p>
+              <p class="engine">Engine: 4GR-FSE</p>
+            </div>
           </div>
-          <div class="imageBlockTwo"><a href="/img/background_dark.jpg" data-fancybox="data-fancybox"><img src="/img/background_dark.jpg"/></a>
-            <h4 class="image-caption">lorem ipsum.</h4>
+          <div class="imageBlockTwo"><a href="/img/Mark-X-2017.jpg" target="_blank"><img src="/img/Mark-X-2017.jpg"/></a>
+            <div class="info">
+              <h4 class="image-caption">Toyota Mark X (X130)</h4>
+              <p class="year">Year: 2017</p>
+              <p class="capacity">Engine Capacity: 2.5</p>
+              <p class="hp">Horse Power: 203</p>
+              <p class="engine">Engine: 4GR-FSE</p>
+            </div>
           </div>
-          <div class="imageBlockTwo"><a href="/img/background_dark.jpg" data-fancybox="data-fancybox"><img src="/img/background_dark.jpg"/></a>
-            <h4 class="image-caption">lorem ipsum.</h4>
+          <div class="imageBlockTwo"><a href="/img/Crown-2017.jpg" target="_blank"><img src="/img/Crown-2017.jpg"/></a>
+            <div class="info">
+              <h4 class="image-caption">Toyota Crown (S210)</h4>
+              <p class="year">Year: 2015</p>
+              <p class="capacity">Engine Capacity: 2.0</p>
+              <p class="hp">Horse Power: 235</p>
+              <p class="engine">Engine: 8AR-FTS</p>
+            </div>
           </div>
-          <div class="imageBlockTwo"><a href="/img/background.jpg" data-fancybox="data-fancybox"><img src="/img/background.jpg"/></a>
-            <h4 class="image-caption">lorem ipsum.</h4>
+          <div class="imageBlockTwo"><a href="/img/background.jpg" target="_blank"><img src="/img/background.jpg"/></a>
+            <div class="info">
+              <h4 class="image-caption">lorem ipsum.</h4>
+              <p class="year"></p>
+              <p class="capacity"></p>
+              <p class="hp"></p>
+              <p class="engine"></p>
+            </div>
           </div>
-          <div class="imageBlockTwo"><a href="/img/background_dark.jpg" data-fancybox="data-fancybox"><img src="/img/background_dark.jpg"/></a>
-            <h4 class="image-caption">lorem ipsum.</h4>
+          <div class="imageBlockTwo"><a href="/img/background_dark.jpg" target="_blank"><img src="/img/background_dark.jpg"/></a>
+            <div class="info">
+              <h4 class="image-caption">lorem ipsum.</h4>
+              <p class="year"></p>
+              <p class="capacity"></p>
+              <p class="hp"></p>
+              <p class="engine"></p>
+            </div>
           </div>
-          <div class="imageBlockTwo"><a href="/img/background_dark.jpg" data-fancybox="data-fancybox"><img src="/img/background_dark.jpg"/></a>
-            <h4 class="image-caption">lorem ipsum.</h4>
+          <div class="imageBlockTwo"><a href="/img/background_dark.jpg" target="_blank"><img src="/img/background_dark.jpg"/></a>
+            <div class="info">
+              <h4 class="image-caption">lorem ipsum.</h4>
+              <p class="year"></p>
+              <p class="capacity"></p>
+              <p class="hp"></p>
+              <p class="engine"></p>
+            </div>
           </div>
-          <div class="imageBlockTwo"><a href="/img/background.jpg" data-fancybox="data-fancybox"><img src="/img/background.jpg"/></a>
-            <h4 class="image-caption">lorem ipsum.</h4>
+          <div class="imageBlockTwo"><a href="/img/background.jpg" target="_blank"><img src="/img/background.jpg"/></a>
+            <div class="info">
+              <h4 class="image-caption">lorem ipsum.</h4>
+              <p class="year"></p>
+              <p class="capacity"></p>
+              <p class="hp"></p>
+              <p class="engine"></p>
+            </div>
           </div>
         </div>
       </div>
@@ -50,6 +97,5 @@
     <script src="/js/vendor.min.js"></script>
     <script src="/js/main.min.js"></script>
     <script src="/libs/vendor/jquery-3.2.1.min.js"></script>
-    <script src="/libs/vendor/jquery.fancybox.min.js"></script>
   </body>
 </html>
