--- a/projects/gulpAndJade/app/catalog.html
+++ b/projects/gulpAndJade/app/catalog.html
@@ -2,8 +2,11 @@
 <html lang="ru-RU">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
     <title>SiteName</title>
     <link rel="stylesheet" href="/css/main.min.css">
+    <link rel="stylesheet" href="/css/jquery.fancybox.min.css">
   </head>
   <body>
     <header><a href="/" class="t-logo"><img src="../img/logo.png" alt="logo"></a>
@@ -46,8 +49,10 @@
       </div>
     </main>
     <footer>Это подвал сайта в отдельном файле</footer>
+    <script src="/libs/vendor/jquery-3.2.1.min.js"></script>
+    <script src="/libs/vendor/jquery.fancybox.min.js"></script>
     <script src="/js/vendor.min.js"></script>
     <script src="/js/main.min.js"></script>
-    <script src="/libs/vendor/jquery-3.2.1.min.js"></script>
+    <script src="/js/print.js"></script>
   </body>
 </html>
