--- a/projects/gulpAndJade/app/index.html
+++ b/projects/gulpAndJade/app/index.html
@@ -2,8 +2,11 @@
 <html lang="ru-RU">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
     <title>SiteName</title>
     <link rel="stylesheet" href="/css/main.min.css">
+    <link rel="stylesheet" href="/css/jquery.fancybox.min.css">
   </head>
   <body>
     <header><a href="/" class="t-logo"><img src="../img/logo.png" alt="logo"></a>
@@ -18,7 +21,7 @@
           Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
         <div class="thumbnail--container">
-          <div class="imageBlockTwo"><a href="/img/Corolla-122.jpg" target="_blank"><img src="/img/Corolla-122.jpg"/></a>
+          <div class="imageBlockTwo"><a href="/img/Corolla-122.jpg" data-fancybox="" data-caption="Toyota Corolla ZZE-122"><img src="/img/Corolla-122.jpg"/></a>
             <div class="info">
               <h4 class="image-caption">Toyota Corolla ZZE-122</h4>
               <p class="year">Year: 2004</p>
@@ -27,7 +30,7 @@
               <p class="engine">Engine: 1ZZ-FE</p>
             </div>
           </div>
-          <div class="imageBlockTwo"><a href="/img/Mark-X-2010.jpg" target="_blank"><img src="/img/Mark-X-2010.jpg"/></a>
+          <div class="imageBlockTwo"><a href="/img/Mark-X-2010.jpg" data-fancybox="" data-caption="Toyota Mark X (X130)"><img src="/img/Mark-X-2010.jpg"/></a>
             <div class="info">
               <h4 class="image-caption">Toyota Mark X (X130)</h4>
               <p class="year">Year: 2010</p>
@@ -36,7 +39,7 @@
               <p class="engine">Engine: 4GR-FSE</p>
             </div>
           </div>
-          <div class="imageBlockTwo"><a href="/img/Mark-X-2017.jpg" target="_blank"><img src="/img/Mark-X-2017.jpg"/></a>
+          <div class="imageBlockTwo"><a href="/img/Mark-X-2017.jpg" data-fancybox="" data-caption="Toyota Mark X (X130)"><img src="/img/Mark-X-2017.jpg"/></a>
             <div class="info">
               <h4 class="image-caption">Toyota Mark X (X130)</h4>
               <p class="year">Year: 2017</p>
@@ -45,7 +48,7 @@
               <p class="engine">Engine: 4GR-FSE</p>
             </div>
           </div>
-          <div class="imageBlockTwo"><a href="/img/Crown-2017.jpg" target="_blank"><img src="/img/Crown-2017.jpg"/></a>
+          <div class="imageBlockTwo"><a href="/img/Crown-2017.jpg" data-fancybox="" data-caption="Toyota Crown (S210)"><img src="/img/Crown-2017.jpg"/></a>
             <div class="info">
               <h4 class="image-caption">Toyota Crown (S210)</h4>
               <p class="year">Year: 2015</p>
@@ -54,48 +57,51 @@
               <p class="engine">Engine: 8AR-FTS</p>
             </div>
           </div>
-          <div class="imageBlockTwo"><a href="/img/background.jpg" target="_blank"><img src="/img/background.jpg"/></a>
+          <div class="imageBlockTwo"><a href="/img/Vellfire.jpg" data-fancybox="" data-caption="Toyota Vellfire (H30)"><img src="/img/Vellfire.jpg"/></a>
             <div class="info">
-              <h4 class="image-caption">lorem ipsum.</h4>
-              <p class="year"></p>
-              <p class="capacity"></p>
-              <p class="hp"></p>
-              <p class="engine"></p>
+              <h4 class="image-caption">Toyota Vellfire (H30)</h4>
+              <p class="year">Year: 2015</p>
+              <p class="capacity">Engine Capacity: 2.5</p>
+              <p class="hp">Horse Power: 152</p>
+              <p class="engine">Engine: 2AR-FXE</p>
             </div>
           </div>
-          <div class="imageBlockTwo"><a href="/img/background_dark.jpg" target="_blank"><img src="/img/background_dark.jpg"/></a>
+          <div class="imageBlockTwo"><a href="/img/RX-450.jpg" data-fancybox="" data-caption="Lexus RX450 (AL20)"><img src="/img/RX-450.jpg"/></a>
             <div class="info">
-              <h4 class="image-caption">lorem ipsum.</h4>
-              <p class="year"></p>
-              <p class="capacity"></p>
-              <p class="hp"></p>
-              <p class="engine"></p>
+              <h4 class="image-caption">Lexus RX450 (AL20)</h4>
+              <p class="year">Year: 2015</p>
+              <p class="capacity">Engine Capacity: 3.5</p>
+              <p class="hp">Horse Power: 263</p>
+              <p class="engine">Engine: 2GR-FXE</p>
             </div>
           </div>
-          <div class="imageBlockTwo"><a href="/img/background_dark.jpg" target="_blank"><img src="/img/background_dark.jpg"/></a>
+          <div class="imageBlockTwo"><a href="/img/IS-250.jpg" data-fancybox="" data-caption="Lexus IS250 (XE30)"><img src="/img/IS-250.jpg"/></a>
             <div class="info">
-              <h4 class="image-caption">lorem ipsum.</h4>
-              <p class="year"></p>
-              <p class="capacity"></p>
-              <p class="hp"></p>
-              <p class="engine"></p>
+              <h4 class="image-caption">Lexus IS250 (XE30)</h4>
+              <p class="year">Year: 2013</p>
+              <p class="capacity">Engine Capacity: 2.5</p>
+              <p class="hp">Horse Power: 208</p>
+              <p class="engine">Engine: 4GR-FSE</p>
             </div>
           </div>
-          <div class="imageBlockTwo"><a href="/img/background.jpg" target="_blank"><img src="/img/background.jpg"/></a>
+          <div class="imageBlockTwo"><a href="/img/LX-570.jpg" data-fancybox="" data-caption="Lexus LX570 (J200)"><img src="/img/LX-570.jpg"/></a>
             <div class="info">
-              <h4 class="image-caption">lorem ipsum.</h4>
-              <p class="year"></p>
-              <p class="capacity"></p>
-              <p class="hp"></p>
-              <p class="engine"></p>
+              <h4 class="image-caption">Lexus LX570 (J200)</h4>
+              <p class="year">Year: 2015</p>
+              <p class="capacity">Engine Capacity: 5.7</p>
+              <p class="hp">Horse Power: 367</p>
+              <p class="engine">Engine: 3UR-FE</p>
             </div>
           </div>
         </div>
+        <button type="button" id="print" class="print-btn">Print</button>
       </div>
     </main>
     <footer>Это подвал сайта в отдельном файле</footer>
+    <script src="/libs/vendor/jquery-3.2.1.min.js"></script>
+    <script src="/libs/vendor/jquery.fancybox.min.js"></script>
     <script src="/js/vendor.min.js"></script>
     <script src="/js/main.min.js"></script>
-    <script src="/libs/vendor/jquery-3.2.1.min.js"></script>
+    <script src="/js/print.js"></script>
   </body>
 </html>
