--- a/projects/3dParallax/index.html
+++ b/projects/3dParallax/index.html
@@ -24,11 +24,13 @@
                     </div>
                 </div>
             </div>
-        </main>
+        </main>parallax.mouseX(e.pageX);
+    parallax.mouseY(e.pageY);
         <footer>
 
         </footer>
     </div>
+<script src="js/vendor/jquery-3.2.1.min.js"></script>
 <script src="js/vendor/knockout.js"></script>
 <script src="js/script.js"></script>
 </body>
