--- a/projects/3dParallax/index.html
+++ b/projects/3dParallax/index.html
@@ -17,17 +17,15 @@
         <main>
             <div class="banner">
                 <div id="parallaxWrapper" class="parallaxWrapper">
-                    <div class="parallaxBg" data-bind="attr: { style:'-webkit-transform:perspective(1000px) rotateY(' + relativeMouse.x() + 'deg) rotateX(' + relativeMouse.y() + 'deg);transform:perspective(1000px) rotateY(' + relativeMouse.x() + 'deg) rotateX(' + relativeMouse.y() + 'deg)' }"">
+                    <div class="parallaxBg" data-bind="attr: { style:'-webkit-transform:perspective(1000px) rotateY(' + relativeMouse.x() + 'deg) rotateX(' + relativeMouse.y() + 'deg);transform:perspective(1000px) rotateY(' + relativeMouse.x() + 'deg) rotateX(' + relativeMouse.y() + 'deg)' }">
                         <div class="parallax1"></div>
                         <div class="parallax2"></div>
-                        <div class="parallax3"></div>
                     </div>
                 </div>
             </div>
-        </main>parallax.mouseX(e.pageX);
-    parallax.mouseY(e.pageY);
+        </main>
         <footer>
-
+            <h1>Empty</h1>
         </footer>
     </div>
 <script src="js/vendor/jquery-3.2.1.min.js"></script>
