--- a/projects/CaliforniaNews/app/account.html
+++ b/projects/CaliforniaNews/app/account.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
     <title>California News</title>
     <link rel="stylesheet" href="/css/main.min.css">
+    <link rel="stylesheet" href="/css/fonts.css">
   </head>
   <body>
     <div class="wrapper">
@@ -40,20 +41,17 @@
             </fieldset>
             <form class="conetnt--change-password">
               <div class="form--group">
-                <fieldset class="change--password-new">
+                <fieldset class="form--set change--password-new">
+                  <label for="old-password" class="label--form">Old password</label>
                   <input type="password" name="old-password" id="old-password" required>
-                  <label for="old-password">Old password</label>
-                  <div class="after"></div>
                 </fieldset>
-                <fieldset class="change--password-new">
+                <fieldset class="form--set change--password-new">
+                  <label for="new-password" class="label--form">New password</label>
                   <input type="password" name="new-password" id="new-password" required>
-                  <label for="new-password">New password</label>
-                  <div class="after"></div>
                 </fieldset>
-                <fieldset class="change--password-new">
+                <fieldset class="form--set change--password-new">
+                  <label for="repeat-password" class="label--form">Repeat password</label>
                   <input type="password" name="new-password" id="repeat-password" required>
-                  <label for="repeat-password">Repeat password</label>
-                  <div class="after"></div>
                 </fieldset>
               </div>
             </form>
