--- a/projects/CaliforniaNews/app/faq.html
+++ b/projects/CaliforniaNews/app/faq.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
     <title>California News</title>
     <link rel="stylesheet" href="/css/main.min.css">
+    <link rel="stylesheet" href="/css/fonts.css">
   </head>
   <body>
     <div class="wrapper">
@@ -29,9 +30,18 @@
       </header>
       <main>
         <div class="content--title">
-          <h1>Account</h1>
+          <h1>Faq</h1>
+          <p>You don't need be a designer. We've developed a wide range of blocks. Contemporary look and high flexibility makes them handy and applicable for any kind of content.</p>
         </div>
-        <div class="content content--faq"></div>
+        <div class="content content--faq">
+          <div class="content--notes">
+            <h1>Installation instruction</h1>
+            <h3>Automated installation</h3>
+            <p>Installation is free, quick, and easy. Install Jetpack from our site in minutes.</p>
+            <h3>Manual alternatives</h3>
+            <p>Alternatively, install Jetpack via the plugin directory, or upload the files manually to your server and follow the on-screen instructions. If you need additional help read our detailed instructions.</p>
+          </div>
+        </div>
       </main>
       <footer>
         <div class="footer--main">
