--- a/projects/CaliforniaNews/app/index.html
+++ b/projects/CaliforniaNews/app/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
     <title>California News</title>
     <link rel="stylesheet" href="/css/main.min.css">
+    <link rel="stylesheet" href="/css/fonts.css">
   </head>
   <body>
     <div class="wrapper">
@@ -29,15 +30,13 @@
       </header>
       <main>
         <div class="jumbotron-wrapper">
-          <div class="jumbotron">
-            <div class="jumbo--images">
-              <div class="big--frame"><img src="../images/jumbo/big-frame.png"></div>
-              <div class="small--frame"><img src="../images/jumbo/small-frame.png"></div>
-            </div>
-            <div class="jumbo--info">
-              <h1>Create beautiful news website and tell stories</h1>
-              <div class="jumbo--info-buttons"><a href="/steps.html" class="blueBtn">+ Create a webite</a><a href="#" class="howItWorks">How it works</a></div>
-            </div>
+          <div class="jumbo--images">
+            <div class="big--frame"><img src="../images/jumbo/big-frame.png"></div>
+            <div class="small--frame"><img src="../images/jumbo/small-frame.png"></div>
+          </div>
+          <div class="jumbo--info">
+            <h1>Create beautiful news website and tell stories</h1>
+            <div class="jumbo--info-buttons"><a href="/steps.html" class="blueBtn">+ Create a webite</a><a href="#" class="howItWorks">How it works</a></div>
           </div>
         </div>
         <div class="content">
