--- a/projects/CaliforniaNews/app/contacts.html
+++ b/projects/CaliforniaNews/app/contacts.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
     <title>California News</title>
     <link rel="stylesheet" href="/css/main.min.css">
+    <link rel="stylesheet" href="/css/fonts.css">
   </head>
   <body>
     <div class="wrapper">
