--- a/projects/CaliforniaNews/app/account.html
+++ b/projects/CaliforniaNews/app/account.html
@@ -38,6 +38,7 @@
             <fieldset class="content--account-email">
               <label for="email">Email</label>
               <input type="text" name="email" value="test@mail.com" id="email" readonly>
+              <div class="signout--account-wrapper"><a href="#" class="signout--account">Sign Out</a></div>
             </fieldset>
             <form class="conetnt--change-password">
               <div class="form--group">
