--- a/projects/CaliforniaNews/app/faq.html
+++ b/projects/CaliforniaNews/app/faq.html
@@ -34,12 +34,49 @@
           <p>You don't need be a designer. We've developed a wide range of blocks. Contemporary look and high flexibility makes them handy and applicable for any kind of content.</p>
         </div>
         <div class="content content--faq">
-          <div class="content--notes">
-            <h1>Installation instruction</h1>
-            <h3>Automated installation</h3>
-            <p>Installation is free, quick, and easy. Install Jetpack from our site in minutes.</p>
-            <h3>Manual alternatives</h3>
-            <p>Alternatively, install Jetpack via the plugin directory, or upload the files manually to your server and follow the on-screen instructions. If you need additional help read our detailed instructions.</p>
+          <div class="accord--item">
+            <div class="open--accord-item">
+              <h1 class="accord--heading">Installation instruction</h1><span class="accord--arrow">&uarr;</span>
+            </div>
+            <div class="accord--item-content">
+              <h3>Automated installation</h3>
+              <p>Installation is free, quick, and easy. Install Jetpack from our site in minutes.</p>
+              <h3>Manual alternatives</h3>
+              <p>Alternatively, install Jetpack via the plugin directory, or upload the files manually to your server and follow the on-screen instructions. If you need additional help read our detailed instructions.</p>
+            </div>
+          </div>
+          <div class="accord--item">
+            <div class="open--accord-item">
+              <h1 class="accord--heading">Is Jetpack Free?</h1><span class="accord--arrow">&uarr;</span>
+            </div>
+            <div class="accord--item-content">
+              <h3>Automated installation</h3>
+              <p>Installation is free, quick, and easy. Install Jetpack from our site in minutes.</p>
+              <h3>Manual alternatives</h3>
+              <p>Alternatively, install Jetpack via the plugin directory, or upload the files manually to your server and follow the on-screen instructions. If you need additional help read our detailed instructions.</p>
+            </div>
+          </div>
+          <div class="accord--item">
+            <div class="open--accord-item">
+              <h1 class="accord--heading">Should I purchase a paid plan?</h1><span class="accord--arrow">&uarr;</span>
+            </div>
+            <div class="accord--item-content">
+              <h3>Automated installation</h3>
+              <p>Installation is free, quick, and easy. Install Jetpack from our site in minutes.</p>
+              <h3>Manual alternatives</h3>
+              <p>Alternatively, install Jetpack via the plugin directory, or upload the files manually to your server and follow the on-screen instructions. If you need additional help read our detailed instructions.</p>
+            </div>
+          </div>
+          <div class="accord--item">
+            <div class="open--accord-item">
+              <h1 class="accord--heading">Why do I need CA account?</h1><span class="accord--arrow">&uarr;</span>
+            </div>
+            <div class="accord--item-content">
+              <h3>Automated installation</h3>
+              <p>Installation is free, quick, and easy. Install Jetpack from our site in minutes.</p>
+              <h3>Manual alternatives</h3>
+              <p>Alternatively, install Jetpack via the plugin directory, or upload the files manually to your server and follow the on-screen instructions. If you need additional help read our detailed instructions.</p>
+            </div>
           </div>
         </div>
       </main>
