--- a/projects/CaliforniaNews/app/about.html
+++ b/projects/CaliforniaNews/app/about.html
@@ -22,7 +22,7 @@
             <li><a href="/blog.html">Blog</a></li>
             <li><a href="/about.html">About</a></li>
             <li><a href="/contacts.html">Contacts</a></li>
-          </ul><a href="#" title="Profile" class="profile">
+          </ul><a href="/account-login.html" title="Profile" class="profile">
             <svg width="20" height="21" viewBox="0 0 20 21" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               <path id="path0_fill" fill-rule="evenodd" d="M 6 6.5C 6 4.56689 7.56689 3 9.5 3C 11.4331 3 13 4.56689 13 6.5C 13 8.43311 11.4331 10 9.5 10C 7.56689 10 6 8.43311 6 6.5ZM 14.3389 10.8403C 15.3716 9.68945 16 8.16821 16 6.5C 16 2.91016 13.0898 0 9.5 0C 5.91016 0 3 2.91016 3 6.5C 3 8.16821 3.62842 9.68945 4.66113 10.8403C 3.79492 11.2092 3.02539 11.7109 2.36816 12.3682C 0.658203 14.0781 0 16.5483 0 19.5C 0 20.3284 0.671387 21 1.5 21C 2.32861 21 3 20.3284 3 19.5C 3 16.929 3.58008 15.3989 4.48975 14.4895C 5.39893 13.5801 6.92871 13 9.5 13C 12.0713 13 13.6011 13.5801 14.5103 14.4895C 15.4199 15.3989 16 16.929 16 19.5C 16 20.3284 16.6714 21 17.5 21C 18.3286 21 19 20.3284 19 19.5C 19 16.5483 18.3418 14.0781 16.6318 12.3682C 15.9746 11.7109 15.2051 11.2092 14.3389 10.8403Z"></path>
             </svg></a>
