--- a/projects/CaliforniaNews/app/faq.html
+++ b/projects/CaliforniaNews/app/faq.html
@@ -22,7 +22,7 @@
             <li><a href="/blog.html">Blog</a></li>
             <li><a href="/about.html">About</a></li>
             <li><a href="/contacts.html">Contacts</a></li>
-          </ul><a href="#" title="Profile" class="profile">
+          </ul><a href="/account-login.html" title="Profile" class="profile">
             <svg width="20" height="21" viewBox="0 0 20 21" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               <path id="path0_fill" fill-rule="evenodd" d="M 6 6.5C 6 4.56689 7.56689 3 9.5 3C 11.4331 3 13 4.56689 13 6.5C 13 8.43311 11.4331 10 9.5 10C 7.56689 10 6 8.43311 6 6.5ZM 14.3389 10.8403C 15.3716 9.68945 16 8.16821 16 6.5C 16 2.91016 13.0898 0 9.5 0C 5.91016 0 3 2.91016 3 6.5C 3 8.16821 3.62842 9.68945 4.66113 10.8403C 3.79492 11.2092 3.02539 11.7109 2.36816 12.3682C 0.658203 14.0781 0 16.5483 0 19.5C 0 20.3284 0.671387 21 1.5 21C 2.32861 21 3 20.3284 3 19.5C 3 16.929 3.58008 15.3989 4.48975 14.4895C 5.39893 13.5801 6.92871 13 9.5 13C 12.0713 13 13.6011 13.5801 14.5103 14.4895C 15.4199 15.3989 16 16.929 16 19.5C 16 20.3284 16.6714 21 17.5 21C 18.3286 21 19 20.3284 19 19.5C 19 16.5483 18.3418 14.0781 16.6318 12.3682C 15.9746 11.7109 15.2051 11.2092 14.3389 10.8403Z"></path>
             </svg></a>
@@ -36,7 +36,10 @@
         <div class="content content--faq">
           <div class="accord--item">
             <div class="open--accord-item">
-              <h1 class="accord--heading">Installation instruction</h1><span class="accord--arrow">&uarr;</span>
+              <h1 class="accord--heading">Installation instruction</h1>
+              <svg width="14" height="15" viewBox="0 0 14 15" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <path id="path0_fill" fill-rule="evenodd" d="M 0.274587 7.67216C -0.0915292 7.30094 -0.0915292 6.69906 0.274587 6.32784L 6.2408 0.278417C 6.60692 -0.0928057 7.20051 -0.0928057 7.56663 0.278417C 7.93274 0.64964 7.93274 1.25151 7.56663 1.62273L 3.20083 6.04942L 14.0625 6.04942C 14.5803 6.04942 15 6.47501 15 7C 15 7.52499 14.5803 7.95058 14.0625 7.95058L 3.20083 7.95058L 7.56663 12.3773C 7.93274 12.7485 7.93274 13.3504 7.56663 13.7216C 7.20051 14.0928 6.60692 14.0928 6.2408 13.7216L 0.274587 7.67216Z"></path>
+              </svg>
             </div>
             <div class="accord--item-content">
               <h3>Automated installation</h3>
@@ -47,7 +50,10 @@
           </div>
           <div class="accord--item">
             <div class="open--accord-item">
-              <h1 class="accord--heading">Is Jetpack Free?</h1><span class="accord--arrow">&uarr;</span>
+              <h1 class="accord--heading">Is Jetpack Free?</h1>
+              <svg width="14" height="15" viewBox="0 0 14 15" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <path id="path0_fill" fill-rule="evenodd" d="M 0.274587 7.67216C -0.0915292 7.30094 -0.0915292 6.69906 0.274587 6.32784L 6.2408 0.278417C 6.60692 -0.0928057 7.20051 -0.0928057 7.56663 0.278417C 7.93274 0.64964 7.93274 1.25151 7.56663 1.62273L 3.20083 6.04942L 14.0625 6.04942C 14.5803 6.04942 15 6.47501 15 7C 15 7.52499 14.5803 7.95058 14.0625 7.95058L 3.20083 7.95058L 7.56663 12.3773C 7.93274 12.7485 7.93274 13.3504 7.56663 13.7216C 7.20051 14.0928 6.60692 14.0928 6.2408 13.7216L 0.274587 7.67216Z"></path>
+              </svg>
             </div>
             <div class="accord--item-content">
               <h3>Automated installation</h3>
@@ -58,7 +64,10 @@
           </div>
           <div class="accord--item">
             <div class="open--accord-item">
-              <h1 class="accord--heading">Should I purchase a paid plan?</h1><span class="accord--arrow">&uarr;</span>
+              <h1 class="accord--heading">Should I purchase a paid plan?</h1>
+              <svg width="14" height="15" viewBox="0 0 14 15" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <path id="path0_fill" fill-rule="evenodd" d="M 0.274587 7.67216C -0.0915292 7.30094 -0.0915292 6.69906 0.274587 6.32784L 6.2408 0.278417C 6.60692 -0.0928057 7.20051 -0.0928057 7.56663 0.278417C 7.93274 0.64964 7.93274 1.25151 7.56663 1.62273L 3.20083 6.04942L 14.0625 6.04942C 14.5803 6.04942 15 6.47501 15 7C 15 7.52499 14.5803 7.95058 14.0625 7.95058L 3.20083 7.95058L 7.56663 12.3773C 7.93274 12.7485 7.93274 13.3504 7.56663 13.7216C 7.20051 14.0928 6.60692 14.0928 6.2408 13.7216L 0.274587 7.67216Z"></path>
+              </svg>
             </div>
             <div class="accord--item-content">
               <h3>Automated installation</h3>
@@ -69,7 +78,10 @@
           </div>
           <div class="accord--item">
             <div class="open--accord-item">
-              <h1 class="accord--heading">Why do I need CA account?</h1><span class="accord--arrow">&uarr;</span>
+              <h1 class="accord--heading">Why do I need CA account?</h1>
+              <svg width="14" height="15" viewBox="0 0 14 15" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <path id="path0_fill" fill-rule="evenodd" d="M 0.274587 7.67216C -0.0915292 7.30094 -0.0915292 6.69906 0.274587 6.32784L 6.2408 0.278417C 6.60692 -0.0928057 7.20051 -0.0928057 7.56663 0.278417C 7.93274 0.64964 7.93274 1.25151 7.56663 1.62273L 3.20083 6.04942L 14.0625 6.04942C 14.5803 6.04942 15 6.47501 15 7C 15 7.52499 14.5803 7.95058 14.0625 7.95058L 3.20083 7.95058L 7.56663 12.3773C 7.93274 12.7485 7.93274 13.3504 7.56663 13.7216C 7.20051 14.0928 6.60692 14.0928 6.2408 13.7216L 0.274587 7.67216Z"></path>
+              </svg>
             </div>
             <div class="accord--item-content">
               <h3>Automated installation</h3>
