--- a/projects/CaliforniaNews/app/index.html
+++ b/projects/CaliforniaNews/app/index.html
@@ -36,11 +36,11 @@
           </div>
           <div class="jumbo--info">
             <h1>Create beautiful news website and tell stories</h1>
-            <div class="jumbo--info-buttons"><a href="/steps.html" class="blueBtn">+ Create a webite</a><a href="#" class="howItWorks">How it works</a></div>
+            <div class="jumbo--info-buttons"><a href="/steps.html" class="blueBtn">+ Create a webite</a><a href="#features" class="howItWorks">How it works</a></div>
           </div>
         </div>
         <div class="content">
-          <div class="fetures">
+          <div id="features" class="fetures">
             <div class="feature--item">
               <div class="feture--info">
                 <h1>Fast</h1>
