--- a/projects/CaliforniaNews/app/next.html
+++ b/projects/CaliforniaNews/app/next.html
@@ -28,6 +28,22 @@
             </svg></a>
         </div>
       </header>
+      <main>
+        <div class="content--title what">
+          <h1>What's next ?</h1>
+          <p>You don't need be a designer. We've developed a wide range of blocks. Contemporary look and high flexibility makes them handy and applicable for any kind of content. You don't need be a designer. We've developed a wide range of blocks. Contemporary look and high flexibility makes them handy and applicable for any kind of content.</p>
+        </div>
+        <section class="content--whatsNext">
+          <div class="content--notes">
+            <h1>Third note</h1><span>April 13, 2017</span>
+            <h2>Text block</h2>
+            <h3>Text block</h3>
+            <p>This software is still in development, so we don’t recommend you run it on a production site. Consider setting up a test site just to play with the new version. To test WordPress 4.8, try the WordPress Beta Tester plugin (you’ll want “bleeding edge nightlies”). Or you can download the beta here (zip).</p>
+            <p>For more information on what’s new in 4.8, check out the Beta 1 blog post. Since then, we’ve made over 50 changes in Beta 2.</p>
+            <p>Do you speak a language other than English? Help us translate WordPress into more than 100 languages!</p>
+          </div>
+        </section>
+      </main>
       <footer>
         <div class="footer--main">
           <ul>
