--- a/projects/CaliforniaNews/app/steps.html
+++ b/projects/CaliforniaNews/app/steps.html
@@ -45,7 +45,7 @@
             </div>
             <section class="content content--tehemes">
               <div class="theme--card"><a href="#" class="cover--image"><img src="/images/site-covers/cover1.jpg"/></a>
-                <h2>Dayli insight</h2>
+                <h2>Daily Insight</h2>
                 <p>by Yam Chhetri</p>
                 <div class="select--theme"><a href="#" class="blueBtn">Select template</a><a href="#" class="read--more">Read more</a></div>
                 <input type="radio" checked="checked" name="slect-theme" class="select--theme-radio"/>
@@ -63,7 +63,7 @@
                 <input type="radio" name="slect-theme" class="select--theme-radio"/>
               </div>
               <div class="theme--card"><a href="#" class="cover--image"><img src="/images/site-covers/cover4.jpg"/></a>
-                <h2>MH NewsMagazine</h2>
+                <h2>Mercia</h2>
                 <p>by MH Themes</p>
                 <div class="select--theme"><a href="#" class="blueBtn">Select template</a><a href="#" class="read--more">Read more</a></div>
                 <input type="radio" name="slect-theme" class="select--theme-radio"/>
@@ -460,7 +460,7 @@
                     <fieldset class="form--set login--form-email">
                       <label for="email2" class="label--form">Email</label>
                       <input type="email" name="email" id="email2" required>
-                      <div class="no--account-wrapper"><span>No account ?</span><a href="#" class="no-account">Sign Up with email</a></div>
+                      <div class="no--account-wrapper"><span>Already have an account?</span><a href="#" class="no-account">Sign In</a></div>
                     </fieldset>
                     <fieldset class="form--set login--form-password">
                       <label for="password2" class="label--form">Passwords</label>
@@ -504,20 +504,6 @@
                           <path id="path0_fill" fill-rule="evenodd" d="M 0.292893 8.07107C -0.0976311 7.68054 -0.0976311 7.04738 0.292893 6.65685L 6.65685 0.292893C 7.04738 -0.0976311 7.68054 -0.0976311 8.07107 0.292893C 8.46159 0.683418 8.46159 1.31658 8.07107 1.70711L 3.41421 6.36396L 15 6.36396C 17.7614 6.36396 20 8.60254 20 11.364C 20 11.9162 19.5523 12.364 19 12.364C 18.4477 12.364 18 11.9162 18 11.364C 18 9.70711 16.6569 8.36396 15 8.36396L 3.41421 8.36396L 8.07107 13.0208C 8.46159 13.4113 8.46159 14.0445 8.07107 14.435C 7.68054 14.8256 7.04738 14.8256 6.65685 14.435L 0.292893 8.07107Z"></path>
                         </svg></a></div>
                   </div>
-                </div>
-              </section>
-              <section class="content--whatsNext">
-                <div class="content--title what">
-                  <h1>What's next ?</h1>
-                  <p>You don't need be a designer. We've developed a wide range of blocks. Contemporary look and high flexibility makes them handy and applicable for any kind of content. You don't need be a designer. We've developed a wide range of blocks. Contemporary look and high flexibility makes them handy and applicable for any kind of content.</p>
-                </div>
-                <div class="content--notes">
-                  <h1>Third note</h1><span>April 13, 2017</span>
-                  <h2>Text block</h2>
-                  <h3>Text block</h3>
-                  <p>This software is still in development, so we don’t recommend you run it on a production site. Consider setting up a test site just to play with the new version. To test WordPress 4.8, try the WordPress Beta Tester plugin (you’ll want “bleeding edge nightlies”). Or you can download the beta here (zip).</p>
-                  <p>For more information on what’s new in 4.8, check out the Beta 1 blog post. Since then, we’ve made over 50 changes in Beta 2.</p>
-                  <p>Do you speak a language other than English? Help us translate WordPress into more than 100 languages!</p>
                 </div>
               </section>
             </section>
