--- a/projects/CaliforniaNews/app/index.html
+++ b/projects/CaliforniaNews/app/index.html
@@ -41,6 +41,7 @@
           </div>
         </div>
         <div class="content">
+          <h1 class="features--heading">Features</h1>
           <div id="features" class="fetures">
             <div class="feature--item">
               <div class="feture--info">
