--- a/projects/CaliforniaNews/app/account.html
+++ b/projects/CaliforniaNews/app/account.html
@@ -34,7 +34,7 @@
         <div class="content--title">
           <h1>Account</h1>
         </div>
-        <div class="content content--account">
+        <div class="content--account">
           <div class="content--account-profile">
             <h1>Your profile</h1>
             <fieldset class="content--account-email">
