--- a/projects/CaliforniaNews/app/blog.html
+++ b/projects/CaliforniaNews/app/blog.html
@@ -34,7 +34,7 @@
         <div class="content--title">
           <h1>Blog</h1>
         </div>
-        <div class="content content--blog">
+        <div class="content--blog">
           <div class="content--notes">
             <h1>First note</h1><span>April 13, 2017</span>
             <h2>Text block</h2>
