--- a/projects/CaliforniaNews/app/faq.html
+++ b/projects/CaliforniaNews/app/faq.html
@@ -35,7 +35,7 @@
           <h1>Faq</h1>
           <p>You don't need be a designer. We've developed a wide range of blocks. Contemporary look and high flexibility makes them handy and applicable for any kind of content.</p>
         </div>
-        <div class="content content--faq">
+        <div class="content--faq">
           <div class="accord--item">
             <div class="open--accord-item">
               <h1 class="accord--heading">Installation instruction</h1>
