--- a/projects/CaliforniaNews/app/features.html
+++ b/projects/CaliforniaNews/app/features.html
@@ -35,7 +35,7 @@
           <h1>Features</h1>
           <p>You don't need be a designer. We've developed a wide range of blocks. Contemporary look and high flexibility makes them handy and applicable for any kind of content.</p>
         </div>
-        <div class="content">
+        <div class="content content-features-page">
           <div class="fetures">
             <div class="feature--item">
               <div class="feture--info">
