--- a/projects/CaliforniaNews/app/help.html
+++ b/projects/CaliforniaNews/app/help.html
@@ -34,7 +34,7 @@
         <div class="content--title">
           <h1>Help</h1>
         </div>
-        <div class="content content--about">
+        <div class="content--help">
           <div class="content--notes">
             <h1>Third note</h1><span>April 13, 2017</span>
             <h2>Text block</h2>
