--- a/projects/CaliforniaNews/app/index.html
+++ b/projects/CaliforniaNews/app/index.html
@@ -41,7 +41,7 @@
             <div class="jumbo--info-buttons"><a href="/steps.html" class="blueBtn">+ Create a webite</a><a href="#features" class="howItWorks">How it works</a></div>
           </div>
         </div>
-        <div class="content">
+        <div class="content content-features">
           <div id="features" class="fetures">
             <h1 class="features--heading">Features</h1>
             <div class="feature--item">
