--- a/projects/CaliforniaNews/app/contacts.html
+++ b/projects/CaliforniaNews/app/contacts.html
@@ -34,7 +34,7 @@
         <div class="content--title">
           <h1>Contacts</h1>
         </div>
-        <div class="content content--contacts">
+        <div class="content--contacts">
           <div class="content--notes">
             <h1>Third note</h1><span>April 13, 2017</span>
             <h2>Text block</h2>
