--- a/projects/CaliforniaNews/app/_layout.html
+++ b/projects/CaliforniaNews/app/_layout.html
@@ -68,7 +68,7 @@
         </div>
       </footer>
       <div class="small--modal-wrapper">
-        <h1>Rest Password</h1>
+        <h1>Reset Password</h1>
         <fieldset class="content--account-reset">
           <label for="email">Email</label>
           <input type="text" name="email" value="test@mail.com" id="email" readonly>
@@ -76,8 +76,33 @@
         </fieldset>
         <div class="send-link"><a href="#" class="blueBtn">Get link</a></div>
       </div>
+      <div class="big--modal-themes">
+        <h1>Daily Insight</h1>
+        <div class="modal--author"><span>by Yam Chhetri</span><span>Theme Homepage</span></div>
+        <div class="modal--info">
+          <p>Daily Insight is a news and magazine WordPress free theme which can transform your blog into a modern online magazine which is best suited for dynamic news websites or professional blogs about technology, science, gadgets or anything else you can imagine. It comes with a wide variety of options so you can modify Styling, Featured Slider, Menus, Widgets and much more, directly from theme customizer. This theme is translation ready and woocommerce ready.</p>
+        </div><a href="#" class="blueBtn select--theme-btn">Select template</a>
+        <div class="modal--images">
+          <div class="modal--images-desk"><img src="images/modal-themes/bigModal.jpg" alt="Modal-img 1"></div>
+          <div class="modal--images-mob"><img src="images/modal-themes/smallModal.jpg" alt="Modal-img 2"></div>
+        </div>
+      </div>
+      <div class="big--modal-plugins">
+        <div class="modal--plugins-info">
+          <h1>Jetpack</h1>
+          <h2>Description</h2>
+          <div class="modal--plugins-desk">
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+          </div>
+        </div>
+        <div class="modal--plugins-image">
+          <h2>Screenshot</h2><img src="images/modal-plugins/jetpack.jpg" alt="Modal-img 2">
+        </div>
+      </div>
     </div>
-    <script src="/js/vendor.min.js"></script>
-    <script src="/js/main.min.js"></script>
+    <script src="js/vendor.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.bootstrap.wizard.min.js"></script>
+    <script src="js/main.min.js"></script>
   </body>
 </html>
