--- a/projects/CaliforniaNews/app/steps.html
+++ b/projects/CaliforniaNews/app/steps.html
@@ -33,7 +33,7 @@
       <main>
         <div id="rootWizard">
           <div class="steps--container">
-            <h1>Step<span class="step--count"> 1</span> of 4</h1>
+            <h1>Step<span class="step--count"> 1</span><span class="step--count-end">of 4</span></h1>
             <p>You don't need be a designer. We've developed a wide range of blocks. Contemporary look and high flexibility makes them handy and applicable for any kind of content.</p>
             <div class="progress--bar">
               <ul class="prog">
@@ -45,7 +45,7 @@
             </div>
           </div>
           <form method="POST" id="steps--container-wrappper" class="tab-content">
-            <section id="step-1" class="content content--tehemes tab-pane">
+            <section id="step-1" class="content content--tehemes tab-pane active">
               <div class="theme--form">
                 <div class="theme--card"><a href="#" class="cover--image"><img src="/images/site-covers/cover1.jpg"/></a>
                   <h2>Daily Insight</h2>
@@ -400,7 +400,7 @@
                     <path id="path0_fill" fill-rule="evenodd" d="M 0.292893 8.07107C -0.0976311 7.68054 -0.0976311 7.04738 0.292893 6.65685L 6.65685 0.292893C 7.04738 -0.0976311 7.68054 -0.0976311 8.07107 0.292893C 8.46159 0.683418 8.46159 1.31658 8.07107 1.70711L 3.41421 6.36396L 15 6.36396C 17.7614 6.36396 20 8.60254 20 11.364C 20 11.9162 19.5523 12.364 19 12.364C 18.4477 12.364 18 11.9162 18 11.364C 18 9.70711 16.6569 8.36396 15 8.36396L 3.41421 8.36396L 8.07107 13.0208C 8.46159 13.4113 8.46159 14.0445 8.07107 14.435C 7.68054 14.8256 7.04738 14.8256 6.65685 14.435L 0.292893 8.07107Z"></path>
                   </svg></a></div>
             </section>
-            <section id="step-3" class="content content--login tab-pane">
+            <section id="step-3" class="content content--login tab-pane auth">
               <div class="login--container">
                 <h1>Login with</h1>
                 <ul class="login--social">
