Add  couple scripts

--- a/projects/CaliforniaNews/app/steps.html
+++ b/projects/CaliforniaNews/app/steps.html
@@ -34,7 +34,10 @@
       <main>
         <div class="steps--container">
           <h1>Step 1 of 4</h1>
-          <p>You don't need be a designer. We've developed a wide range of blocks. Contemporary look and high flexibility makes them handy and applicable for any kind of content.</p><span class="mobile--steps active">Choose a template</span><span class="mobile--steps">Select Plugins</span><span class="mobile--steps">Authorization</span><span class="mobile--steps">Download Site</span>
+          <p class="step--title active-title">We have identified the seven best templates for media sites from the WordPress template store for you. Choose how your new site will look like.</p>
+          <p class="step--title">Here is a set of the most necessary plug-ins for media sites created on WordPress. Choose the right one for you.</p>
+          <p class="step--title">Please log in to manage the created sites or be able to connect with us.</p>
+          <p class="step--title">Download the archive with your site and a set of plug-ins on your computer. Further instructions will tell you what to do next.</p><span class="mobile--steps active">Choose a template</span><span class="mobile--steps">Select Plugins</span><span class="mobile--steps">Authorization</span><span class="mobile--steps">Download Site</span>
           <div class="progress--bar">
             <ul class="prog">
               <li class="active">Choose a template</li>
